manifests/vpc-peering-experiment/workloads-a.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  namespace: default
  annotations:
    ovn.kubernetes.io/logical_switch: subnet-tenant-a
spec:
  containers:
  - name: client
    image: alpine
    command: ["sh", "-c", "sleep 36000"]
